Fixed width for main video container on mobile view to maintain correct aspect ratio

--- a/project-wesley-wei-client/src/components/pages/videos/styles/Videos.css
+++ b/project-wesley-wei-client/src/components/pages/videos/styles/Videos.css
@@ -96,7 +96,7 @@
 
     .main-video-section
     .main-video-container {
-        width: 100%;
+        width: auto;
         height: 100%;
     }
 }
